--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,4 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-fhir.nigeriaImmunization.json
-template = fhir.base.template#current
+template = fhir.base.template
+
