updated output of yaml file

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,9 +35,10 @@ jobs:
         with:
           source: ./
           destination: ./_site
-      - name: Upload artifact
+      - name: Upload output/ as artifact
         uses: actions/upload-pages-artifact@v3
-
+        with:
+          path: ./output
   # Deployment job
   deploy:
     environment:
