--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -9,12 +9,12 @@ name: Nigeria-immunization-FHIR-IG
 title: Nigeria Immunization FHIR IG
 description: Nigeria Immunization FHIR IG
 status: draft # draft | active | retired | unknown
-version: 0.4.0
+version: 0.5.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2025+
 releaseLabel: ci-build
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
-# jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
+jurisdiction: urn:iso:std:iso:3166#NG "Nigeria"  # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
   name: https://nphcda.gov.ng
   url: https://nphcda.gov.ng
@@ -62,6 +62,8 @@ pages:
     title: Non-Functional Requirements
   search-operation.md:
     title: Search and Operation
+  privacy-security.md:
+    title: Privacy and Security Considerations
 
 # dependancies.md:
 #   title: Dependancies
@@ -109,7 +111,7 @@ contact:
         value: ig@nphcda.gov.ng
         use: work
         
-jurisdiction: urn:iso:std:iso:3166#NG "Nigeria"        
+      
 #
 #
 # The global property corresponds to the IG.global property, but it
