--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -12,7 +12,7 @@ status: draft # draft | active | retired | unknown
 version: 0.5.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2025+
-releaseLabel: ci-build
+releaseLabel: draft
 # license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
 jurisdiction: urn:iso:std:iso:3166#NG "Nigeria"  # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
@@ -147,13 +147,13 @@ contact:
 # The following are simple examples to demonstrate what this might
 # look like:
 #
-# resources:
-#   Patient/neir-example-patient:
-#     name: My Example Patient
-#     description: An example Patient
-#     exampleBoolean: true
-#   Patient/bad-example: omit
 #
+#resources:
+#  StructureMap/registerclientmodel-to-ngpatient:
+#    name: "RegisterClientModelToNgPatient"
+#    description: "Mapping from the RegisterClientModel logical form to the NgImmPatient profile"
+#    exampleBoolean: false
+
 #
 # Groups can control certain aspects of the IG generation.  The IG
 # documentation recommends that authors use the default groups that
