created package-list.json and updated sushi-config.yaml

--- a/ig.ini
+++ b/ig.ini
@@ -1,9 +1,5 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-fhir.nigeriaImmunizationIG.json
+ig = fsh-generated/resources/ImplementationGuide-ng.gov.nphcda.immunization.json
 template = fhir.base.template
-#structureDefinitions = fsh-generated/resources/StructureDefinition-NgImmPatient.json
-#value-sets = fsh-generated/resources/ValueSet-nigeria-gender.json, fsh-generated/resources/ValueSet-nigeria-wards.json, fsh-generated/resources/ValueSet-nigeria-lgas.json, fsh-generated/resources/ValueSet-nigeria-states.json, fsh-generated/resources/ValueSet-nigeria-languages.json, fsh-generated/resources/ValueSet-nigeria-relationship.json, fsh-generated/resources/ValueSet-nigeria-hiv-status.json, fsh-generated/resources/ValueSet-nigeria-pregnancy-status.json
-#codeSystems = fsh-generated/resources/CodeSystem-NGGenderCS.json, fsh-generated/resources/CodeSystem-NGWardsCS.json, fsh-generated/resources/CodeSystem-NGLGAsCS.json, fsh-generated/resources/CodeSystem-NGStatesCS.json, fsh-generated/resources/CodeSystem-NGLanguagesCS.json, fsh-generated/resources/CodeSystem-NGRelationshipsCS.json, fsh-generated/resources/CodeSystem-NGHivStatusCS.json, fsh-generated/resources/CodeSystem-NGPregnancyStatusCS.json
-#schematron-generate = true
-#schematron-include-value-sets = true
+
 
